--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </svg>
               </div>
             </a>
-            <a href="https://www.instagram.com/samsilversidesyoga/" target="_blank" class="ss-hero-link-container w-inline-block">
+            <a href="https://www.instagram.com/samsilversides/" target="_blank" class="ss-hero-link-container w-inline-block">
               <div>Instagram</div>
               <div class="ss-svg-embed w-embed">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -72,7 +72,7 @@
         </div>
         <div id="w-node-_71aaaf69-7d30-5d55-2c96-00434b14ea0f-f42c8fba" class="ss-contact-box">
           <h3 class="ss-contact-h3">Message Me</h3>
-          <a href="https://www.instagram.com/samsilversidesyoga/" target="_blank" class="ss-contact-circle w-inline-block">
+          <a href="https://www.instagram.com/samsilversides/" target="_blank" class="ss-contact-circle w-inline-block">
             <div class="ss-svg-embed w-embed">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                 <path d="M7 18C6.7 18 6.5 17.9 6.3 17.7C5.9 17.3 5.9 16.7 6.3 16.3L16.3 6.3C16.7 5.9 17.3 5.9 17.7 6.3C18.1 6.7 18.1 7.3 17.7 7.7L7.7 17.7C7.5 17.9 7.3 18 7 18Z" fill="white"></path>
