--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Onest:300,regular,500" media="all">
     <script type="text/javascript">WebFont.load({  google: {    families: ["Onest:300,regular,500"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+    <link href="./images/ss-favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="./images/ss-webclip.png" rel="apple-touch-icon">
   </head>
   <body>
     <section class="ss-hero-section">
