--- a/index.html
+++ b/index.html
@@ -54,6 +54,73 @@
     <section class="ss-quote-section">
       <p class="ss-quote">Hey there, I'm Sam—and I believe that a good teacher is a keen student humbled by a steady, daily and dedicated practice.</p>
     </section>
+    <section class="ss-practice-section">
+      <div class="ss-practice-grid">
+        <div id="w-node-ce280e63-6bab-bf8c-04ec-18766a1a2574-f42c8fba" class="ss-practice-container">
+          <h2 id="w-node-_90f47fe6-a1f9-094f-9d91-d5dee51aceca-f42c8fba" class="ss-practice-h2">Practice With Me</h2>
+          <h4 class="ss-practice-h4">Montreal, QC</h4>
+        </div>
+        <div id="w-node-e11386c9-7725-4035-a709-2ca1fb47c9c8-f42c8fba" class="ss-classes-container">
+          <div id="w-node-_139428ad-0d32-eaaa-f673-e127579f94ed-f42c8fba" class="ss-class-container">
+            <a href="https://www.mysoremontreal.com/" target="_blank" class="ss-classes-link w-inline-block">
+              <div class="ss-classes-link-container">
+                <h3 class="ss-classes-h3">Mysore</h3>
+                <div class="ss-arrow-black w-embed">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M9.33333 24C8.93333 24 8.66667 23.8667 8.4 23.6C7.86667 23.0667 7.86667 22.2667 8.4 21.7333L21.7333 8.4C22.2667 7.86667 23.0667 7.86667 23.6 8.4C24.1333 8.93333 24.1333 9.73333 23.6 10.2667L10.2667 23.6C10 23.8667 9.73333 24 9.33333 24Z" fill="#333333"></path>
+                    <path d="M22.6668 22.6667C21.8668 22.6667 21.3335 22.1333 21.3335 21.3333V10.6667H10.6668C9.86683 10.6667 9.3335 10.1333 9.3335 9.33333C9.3335 8.53333 9.86683 8 10.6668 8H22.6668C23.4668 8 24.0002 8.53333 24.0002 9.33333V21.3333C24.0002 22.1333 23.4668 22.6667 22.6668 22.6667Z" fill="#333333"></path>
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <div class="ss-classes-time">Mon–Fri: 8:00–10:15am</div>
+          </div>
+          <div id="w-node-_0a638a56-9782-b496-90c8-c09bc86a94e5-f42c8fba" class="ss-class-container">
+            <a href="https://www.ashtangamontreal.com/" target="_blank" class="ss-classes-link w-inline-block">
+              <div class="ss-classes-link-container">
+                <h3 class="ss-classes-h3">Ashtanga All-Levels</h3>
+                <div class="ss-arrow-black w-embed">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M9.33333 24C8.93333 24 8.66667 23.8667 8.4 23.6C7.86667 23.0667 7.86667 22.2667 8.4 21.7333L21.7333 8.4C22.2667 7.86667 23.0667 7.86667 23.6 8.4C24.1333 8.93333 24.1333 9.73333 23.6 10.2667L10.2667 23.6C10 23.8667 9.73333 24 9.33333 24Z" fill="#333333"></path>
+                    <path d="M22.6668 22.6667C21.8668 22.6667 21.3335 22.1333 21.3335 21.3333V10.6667H10.6668C9.86683 10.6667 9.3335 10.1333 9.3335 9.33333C9.3335 8.53333 9.86683 8 10.6668 8H22.6668C23.4668 8 24.0002 8.53333 24.0002 9.33333V21.3333C24.0002 22.1333 23.4668 22.6667 22.6668 22.6667Z" fill="#333333"></path>
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <div class="ss-classes-time">Thu: 12:15–1:15pm</div>
+            <div class="ss-classes-time">Sun: 8:30–9:45am</div>
+          </div>
+          <div id="w-node-f40b9779-7cc7-0dda-0822-db40724e294f-f42c8fba" class="ss-class-container">
+            <a href="https://www.studiomileend.com/en/" target="_blank" class="ss-classes-link w-inline-block">
+              <div class="ss-classes-link-container">
+                <h3 class="ss-classes-h3">Ashtanga Exploration</h3>
+                <div class="ss-arrow-black w-embed">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M9.33333 24C8.93333 24 8.66667 23.8667 8.4 23.6C7.86667 23.0667 7.86667 22.2667 8.4 21.7333L21.7333 8.4C22.2667 7.86667 23.0667 7.86667 23.6 8.4C24.1333 8.93333 24.1333 9.73333 23.6 10.2667L10.2667 23.6C10 23.8667 9.73333 24 9.33333 24Z" fill="#333333"></path>
+                    <path d="M22.6668 22.6667C21.8668 22.6667 21.3335 22.1333 21.3335 21.3333V10.6667H10.6668C9.86683 10.6667 9.3335 10.1333 9.3335 9.33333C9.3335 8.53333 9.86683 8 10.6668 8H22.6668C23.4668 8 24.0002 8.53333 24.0002 9.33333V21.3333C24.0002 22.1333 23.4668 22.6667 22.6668 22.6667Z" fill="#333333"></path>
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <div class="ss-classes-time">Thu: 4:30–5:30pm</div>
+          </div>
+          <div id="w-node-_75bf5087-e9af-2662-7225-be943dc2ba14-f42c8fba" class="ss-class-container last">
+            <a href="https://www.innocereyoga.com/" target="_blank" class="ss-classes-link w-inline-block">
+              <div class="ss-classes-link-container">
+                <h3 class="ss-classes-h3">Vinyāsa 60</h3>
+                <div class="ss-arrow-black w-embed">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M9.33333 24C8.93333 24 8.66667 23.8667 8.4 23.6C7.86667 23.0667 7.86667 22.2667 8.4 21.7333L21.7333 8.4C22.2667 7.86667 23.0667 7.86667 23.6 8.4C24.1333 8.93333 24.1333 9.73333 23.6 10.2667L10.2667 23.6C10 23.8667 9.73333 24 9.33333 24Z" fill="#333333"></path>
+                    <path d="M22.6668 22.6667C21.8668 22.6667 21.3335 22.1333 21.3335 21.3333V10.6667H10.6668C9.86683 10.6667 9.3335 10.1333 9.3335 9.33333C9.3335 8.53333 9.86683 8 10.6668 8H22.6668C23.4668 8 24.0002 8.53333 24.0002 9.33333V21.3333C24.0002 22.1333 23.4668 22.6667 22.6668 22.6667Z" fill="#333333"></path>
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <div class="ss-classes-time">Fri: 5:30–6:30pm</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="ss-contact-section">
       <h2 class="ss-contact-h2">Get in Touch</h2>
       <div class="ss-contact-grid">
