--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="./images/ss-favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="./images/ss-webclip.png" rel="apple-touch-icon">
   </head>
-  <body>
+  <body class="body">
     <section class="ss-hero-section">
       <div class="ss-hero-sub-container">
         <div>
