--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="ss-practice-grid">
         <div id="w-node-ce280e63-6bab-bf8c-04ec-18766a1a2574-f42c8fba" class="ss-practice-container">
           <h2 id="w-node-_90f47fe6-a1f9-094f-9d91-d5dee51aceca-f42c8fba" class="ss-practice-h2">Practice With Me</h2>
-          <h4 class="ss-practice-h4">Montreal, QC</h4>
+          <h4 class="ss-practice-h4">Montréal, QC</h4>
         </div>
         <div id="w-node-e11386c9-7725-4035-a709-2ca1fb47c9c8-f42c8fba" class="ss-classes-container">
           <div id="w-node-_139428ad-0d32-eaaa-f673-e127579f94ed-f42c8fba" class="ss-class-container">
