--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
             </a>
             <div class="ss-classes-time">Mon–Fri: 8:00–10:15am</div>
           </div>
+          <div id="w-node-_139428ad-0d32-eaaa-f673-e127579f94ed-f42c8fba" class="ss-class-container">
+            <a href="https://www.innocereyoga.com/" target="_blank" class="ss-classes-link w-inline-block">
+              <div class="ss-classes-link-container">
+                <h3 class="ss-classes-h3">Open Ashtanga</h3>
+                <div class="ss-arrow-black w-embed">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M9.33333 24C8.93333 24 8.66667 23.8667 8.4 23.6C7.86667 23.0667 7.86667 22.2667 8.4 21.7333L21.7333 8.4C22.2667 7.86667 23.0667 7.86667 23.6 8.4C24.1333 8.93333 24.1333 9.73333 23.6 10.2667L10.2667 23.6C10 23.8667 9.73333 24 9.33333 24Z" fill="#333333"></path>
+                    <path d="M22.6668 22.6667C21.8668 22.6667 21.3335 22.1333 21.3335 21.3333V10.6667H10.6668C9.86683 10.6667 9.3335 10.1333 9.3335 9.33333C9.3335 8.53333 9.86683 8 10.6668 8H22.6668C23.4668 8 24.0002 8.53333 24.0002 9.33333V21.3333C24.0002 22.1333 23.4668 22.6667 22.6668 22.6667Z" fill="#333333"></path>
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <div class="ss-classes-time">Tue: 4:00–5:00pm</div>
+          </div>
           <div id="w-node-_0a638a56-9782-b496-90c8-c09bc86a94e5-f42c8fba" class="ss-class-container">
             <a href="https://www.ashtangamontreal.com/" target="_blank" class="ss-classes-link w-inline-block">
               <div class="ss-classes-link-container">
