--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </section>
-    <section class="ss-photo-section"><img src="./images/ss-hero-image.jpg" loading="lazy" alt="" class="ss-photo"></section>
+    <section class="ss-photo-section"><img src="./images/ss-hero-image_v2.jpg" loading="lazy" alt="" class="ss-photo"></section>
     <section class="ss-quote-section">
       <p class="ss-quote">Hey there, I'm Sam—and I believe that a good teacher is a keen student humbled by a steady, daily and dedicated practice.</p>
     </section>
