--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <section class="ss-photo-section"><img src="./images/ss-hero-image_v2.jpg" loading="lazy" alt="" class="ss-photo"></section>
     <section class="ss-quote-section">
-      <p class="ss-quote">Sam, devoted to Ashtanga since 2012, shares his wisdom worldwide. Teaching since yoga since 2011, he blends tradition with modern insight to inspire dedicated practice.</p>
+      <p class="ss-quote">Sam, devoted to Ashtanga since 2012, shares his wisdom worldwide. Teaching yoga since 2011, he blends tradition with modern insight to inspire dedicated practice.</p>
     </section>
     <section class="ss-practice-section">
       <div class="ss-practice-grid">
