--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <section class="ss-photo-section"><img src="./images/ss-hero-image_v2.jpg" loading="lazy" alt="" class="ss-photo"></section>
     <section class="ss-quote-section">
       <p class="ss-quote">Sam, devoted to Ashtanga since 2012, shares his wisdom worldwide. Teaching yoga since 2011, he blends tradition with modern insight to inspire dedicated practice.</p>
+      <p class="ss-quote">Sam, qui se consacre à l'Ashtanga depuis 2012, partage sa sagesse dans le monde entier. Enseignant le yoga depuis 2011, il allie la tradition à une vision moderne pour inspirer une pratique dévouée.</p>
     </section>
     <section class="ss-practice-section">
       <div class="ss-practice-grid">
