--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div id="w-node-_139428ad-0d32-eaaa-f673-e127579f94ed-f42c8fba" class="ss-class-container">
             <a href="https://www.studiomileend.com/en/" target="_blank" class="ss-classes-link w-inline-block">
               <div class="ss-classes-link-container">
-                <h3 class="ss-classes-h3">Studio Mile End — Ashtanga</h3>
+                <h3 class="ss-classes-h3">Ashtanga @ Studio Mile End</h3>
                 <div class="ss-arrow-black w-embed">
                   <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M9.33333 24C8.93333 24 8.66667 23.8667 8.4 23.6C7.86667 23.0667 7.86667 22.2667 8.4 21.7333L21.7333 8.4C22.2667 7.86667 23.0667 7.86667 23.6 8.4C24.1333 8.93333 24.1333 9.73333 23.6 10.2667L10.2667 23.6C10 23.8667 9.73333 24 9.33333 24Z" fill="#333333"></path>
